Attempt to fix background image bug on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,16 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+
+  background: url(../images/pexels-sebastian-voortman-165505.jpg) no-repeat
+    center center fixed;
+  background-size: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding-top: 80px;
+  padding-bottom: 100px;
 }
 
 p {
@@ -79,19 +89,19 @@ nav .show {
 
 /*------------------------------------------------Main containers */
 
-.bg-image-container {
+/* .bg-image-container {
   background: url(../images/pexels-sebastian-voortman-165505.jpg) no-repeat
     center center fixed;
   background-size: cover;
   display: block;
   left: 0;
   top: 0;
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
   padding-top: 100px;
   padding-bottom: 100px;
-}
+} */
 
 .landing-container {
 }
